--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "*.{tsx,ts}": ["eslint --cache --max-warnings=0 ./src", "prettier --write --ignore-unknown ."]
+  "*.{tsx,ts}": ["eslint --cache ./src", "prettier --write --ignore-unknown ."]
 }
