--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
   "editor.tabSize": 2,
   "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.formatOnSave": true,
-  "prettier.documentSelectors": ["*.{tsx,ts}", "*.{jsx,js}"],
+  "prettier.documentSelectors": ["*.html", "*.{tsx,ts}", "*.{jsx,js}"],
   "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
