--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "baseUrl": "src",
     "types": ["vite-plugin-svgr/client", "jest"]
   },
-  "include": ["./src"]
+  "include": ["./src"],
+  "exclude": ["node_modules"]
 }
