--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-hook-form": "^7.34.1",
     "vite-plugin-svgr": "2.2.0"
   },
   "devDependencies": {
@@ -65,6 +66,9 @@
     "postcss": "^8.4.14",
     "prettier": "2.7.1",
     "react-test-renderer": "^18.2.0",
+    "stylelint": "^14.10.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^27.0.0",
     "tailwindcss": "^3.1.5",
     "ts-jest": "28.0.5",
     "typescript": "^4.7.4",
