--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-input-mask": "^3.0.0-alpha.2",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-react": "^1.3.2",
@@ -69,6 +70,7 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
     "prettier": "2.7.1",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-test-renderer": "^18.2.0",
     "stylelint": "^14.10.0",
     "stylelint-config-prettier": "^9.0.3",
