:wrench: (vscode settings) update settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "editor.tabSize": 2,
   "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.formatOnSave": true,
-  "prettier.documentSelectors": ["*.html", "*.{tsx,ts}", "*.{jsx,js}"],
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "prettier.documentSelectors": ["*.html", "*.{tsx,ts}", "*.{jsx,js}", "*.{css,scss,less}", "*.json", "*.md"],
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "stylelint.packageManager": "pnpm",
 }
