--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,15 +9,15 @@
     "prettier"
   ],
   "overrides": [
-    {
-      // enable eslint-plugin-testing-library rules or preset only for matching files!
-      "files": ["**/__tests__/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
-      "extends": [
-        "plugin:jest/recommended",
-        "plugin:jest-dom/recommended",
-        "plugin:testing-library/react"
-      ]
-    },
+    // {
+    //   // enable eslint-plugin-testing-library rules or preset only for matching files!
+    //   "files": ["**/__tests__/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
+    //   "extends": [
+    //     "plugin:jest/recommended",
+    //     "plugin:jest-dom/recommended",
+    //     "plugin:testing-library/react"
+    //   ]
+    // },
     {
       "files": ["**/*.ts?(x)"],
       "parser": "@typescript-eslint/parser",
