--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "vite-react-ts",
-  "version": "0.0.0",
-  "description": "React Typescript Starter Template with Vite",
+  "name": "fem-interactive-card-rts",
+  "version": "0.0.1",
+  "description": "Frontend Mentor - Interactive card details form",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uchihamalolan/vite-react-ts.git"
+    "url": "git@github.com:cbserra/fem-interactive-card-rts.git"
   },
   "keywords": [
     "vite",
-    "react",
-    "starter",
-    "template"
+    "react"
   ],
-  "author": "Malolan B. <uchihamalolan@gmail.com> (https://twitter.com/malolan12)",
+  "author": "cbserra <789723+cbserra@users.noreply.github.com>",
   "license": "MIT",
-  "homepage": "https://github.com/uchihamalolan/vite-react-ts",
+  "homepage": "https://github.com/cbserra/fem-interactive-card-rts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -24,9 +22,11 @@
     "commit": "git-cz",
     "format": "prettier --write --ignore-unknown .",
     "lint": "eslint --cache ./src",
-    "analyze": "source-map-explorer 'dist/assets/*.js'"
+    "analyze": "source-map-explorer 'dist/assets/*.js'",
+    "style": "stylelint './src/**/*.css' --fix"
   },
   "dependencies": {
+    "markdownlint": "^0.26.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
@@ -38,10 +38,8 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/prompt-cli": "^17.0.3",
     "@testing-library/dom": "^8.14.0",
-    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
-    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -58,16 +56,13 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.2.5",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.5.1",
     "husky": "^8.0.1",
-    "jest": "28.1.2",
-    "jest-environment-jsdom": "^28.1.2",
     "lint-staged": "^13.0.3",
+    "markdownlint-cli2": "^0.5.1",
+    "markdownlint-cli2-formatter-pretty": "^0.0.3",
     "postcss": "^8.4.14",
     "prettier": "2.7.1",
     "react-input-mask": "^3.0.0-alpha.2",
@@ -75,8 +70,6 @@
     "stylelint": "^14.10.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^27.0.0",
-    "tailwindcss": "^3.1.5",
-    "ts-jest": "28.0.5",
     "typescript": "^4.7.4",
     "vite": "^2.9.14",
     "vite-tsconfig-paths": "^3.5.0"
