--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "build": "tsc && vite build",
     "test": "jest",
     "serve": "vite preview",
-    "prepare": "husky install",
     "commit": "git-cz",
     "format": "prettier --write --ignore-unknown .",
     "lint": "eslint --cache ./src",
@@ -30,48 +29,49 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.34.1",
+    "react-hook-form": "^7.34.2",
     "vite-plugin-svgr": "2.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/prompt-cli": "^17.0.3",
-    "@testing-library/dom": "^8.14.0",
+    "@testing-library/dom": "^8.17.1",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/node": "^18.0.3",
-    "@types/react": "^18.0.15",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^18.7.6",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@types/react-input-mask": "^3.0.0-alpha.2",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
+    "@types/react-input-mask": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "@vitejs/plugin-react": "^1.3.2",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.8",
     "commitizen": "^4.2.5",
     "commitlint": "^17.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-emoji": "1.3.2-canary.2",
-    "eslint": "^8.19.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.2.5",
+    "eslint-import-resolver-typescript": "^3.4.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markdownlint-cli2": "^0.5.1",
     "markdownlint-cli2-formatter-pretty": "^0.0.3",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-test-renderer": "^18.2.0",
     "stylelint": "^14.10.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^27.0.0",
+    "tailwindcss": "^1.9.6",
     "typescript": "^4.7.4",
-    "vite": "^2.9.14",
+    "vite": "^2.9.15",
     "vite-tsconfig-paths": "^3.5.0"
   },
   "config": {
